fixes spacing on mobile view

--- a/web/src/components/about.module.css
+++ b/web/src/components/about.module.css
@@ -8,6 +8,7 @@
   flex-direction: column;
   @media (min-width: 450px) {
     font-size: 20px;
+    overflow: hidden;
   }
 }
 
@@ -19,6 +20,7 @@
   @media (min-width: 800px) {
     flex-direction: row;
     margin-bottom: 6em;
+    margin-top: 0px;
   }
 }
 
